force-app/main/default/objects/ShopProduct__c/ShopProduct__c.object-meta.xml
<CustomObject>
    <label>ShopProduct</label>
    <nameField>
        <displayFormat>PRD-{0000}</displayFormat>
        <label>ProductID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ShopProducts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>