force-app/main/default/objects/ShopProduct__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set product available or not</description>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>