force-app/main/default/objects/ShopProduct__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Product Price</description>
    <label>Price</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>