force-app/main/default/objects/ShopProduct__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>ProductName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>